--- a/index.html
+++ b/index.html
@@ -1,66 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Meeting Cards</title>
-	<!-- Bootstrap -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <!-- jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- GA -->
-	  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-5416879-14', 'auto');
-  ga('send', 'pageview');
-	</script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-		<style type="text/css">
-			img {
-				background-color:pink;
-				margin:0px;
-				padding:0px;
-				float:left;
-			}
-			.blue{background-color: #5eb5d7;}
-			.green{background-color: #9db616;}
-			.yellow{background-color: #ffde02;}
-			p { text-align: center;}
-			.small{
-				width:25%;
-				height:auto;
-			}
-
-			.full{
-				width:100%;
-				padding: 30px;
-			}
-		</style>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Meeting Cards</title>
+		<link rel="stylesheet" href="/css/styles.css"/>
+		<link rel="manifest" href="/manifest.json">
+		<script type="module" src="/js/main.js"></script>
 	</head>
 	<body>
-		<img id="crd-a" alt="" class="small blue" src="images/mtg-crd-01.png"> <img id="crd-b" alt="" class="small green" src="images/mtg-crd-02.png"> <img id="crd-c" alt="" class="small yellow" src="images/mtg-crd-03.png"> <img id="crd-d" alt="" class="small blue" src="images/mtg-crd-04.png"> <img id="crd-e" alt="" class="small green" src="images/mtg-crd-05.png"> <img id="crd-f" alt="" class="small yellow" src="images/mtg-crd-06.png"> <img id="crd-g" alt="" class="small blue" src="images/mtg-crd-07.png"> <img id="crd-h" alt="" class="small green" src="images/mtg-crd-08.png"> <img id="crd-i" alt="" class="small yellow" src="images/mtg-crd-09.png"> <img id="crd-j" alt="" class="small blue" src="images/mtg-crd-10.png"> <img id="crd-k" alt="" class="small green" src="images/mtg-crd-11.png"> <img id="crd-l" alt="" class="small yellow" src="images/mtg-crd-12.png"> <img id="crd-m" alt="" class="small blue" src="images/mtg-crd-13.png"> <img id="crd-n" alt="" class="small green" src="images/mtg-crd-14.png"> <img id="crd-o" alt="" class="small yellow" src="images/mtg-crd-15.png"> <img id="crd-p" alt="" class="small blue" src="images/mtg-crd-16.png"> 
-		<p>
-			Designed by <a href="https://twitter.com/stephenwalker78">Stephen Walker</a> at <a href="http://seethinkdo.it">See Think Do</a> to be used on a mobile device, because not everyone has a printer. <br>Inspired by the original super cards from <a href="https://www.collaborationsuperpowers.com/supercards/" target="_blank">Collaboration Superpowers</a>.
-		</p>
-		<p>
-			Help <a href="https://github.com/stephenwalker78/meeting-cards/">improve these cards</a> on Github.
-		</p>
-		<script>
-			$( "img" ).click(function() {
-				$( this ).toggleClass( "full" );
-				$('html, body').animate({
-					scrollTop: $(this).offset().top
-				},0);
-			});
-		</script>
+		<meeting-cards>
+			<meeting-card type="breakup" class="yellow">
+				You're breaking up!
+			</meeting-card>
+			<meeting-card type="frozen" class="blue">
+				You're FROZEN
+			</meeting-card>
+			<meeting-card type="muted" class="red">
+				You're on MUTE
+			</meeting-card>
+			<meeting-card type="reboot" class="green">
+				Try a reboot!
+			</meeting-card>
+			<meeting-card type="canthear" class="blue">
+				Can't hear you!
+			</meeting-card>
+			<meeting-card type="badconn" class="blue">
+				Bad connection!
+			</meeting-card>
+			<meeting-card type="noise" class="blue">
+				Someone has BG noise!
+			</meeting-card>
+			<meeting-card type="mute" class="yellow">
+				Please MUTE!
+			</meeting-card>
+			<meeting-card type="yes" class="green">
+				Yes!
+			</meeting-card>
+			<meeting-card type="no" class="red">
+				No!
+			</meeting-card>
+			<meeting-card type="awesome" class="green">
+				Awesome!
+			</meeting-card>
+			<meeting-card type="pass" class="yellow">
+				I pass
+			</meeting-card>
+			<meeting-card type="elmo" class="green">
+				ELMO
+			</meeting-card>
+			<meeting-card type="speedup" class="green">
+				Speed up
+			</meeting-card>
+			<meeting-card type="slowdown" class="yellow">
+				Slow down
+			</meeting-card>
+			<meeting-card type="repeat" class="blue">
+				Please repeat!
+			</meeting-card>
+			<meeting-card type="hold" class="yellow">
+				Hold please!
+			</meeting-card>
+			<meeting-card type="brb" class="blue">
+				Be right back.
+			</meeting-card>
+			<meeting-card type="gtg" class="red">
+				Got to go.
+			</meeting-card>
+			<meeting-card type="question" class="blue">
+				Got a question
+			</meeting-card>
+			<meeting-card type="fivemin" class="green">
+				5 min
+			</meeting-card>
+			<meeting-card type="threemin" class="green">
+				3 min
+			</meeting-card>
+			<meeting-card type="twomin" class="green">
+				2 min
+			</meeting-card>
+			<meeting-card type="onemin" class="green">
+				1 min
+			</meeting-card>
+		</meeting-cards>
 	</body>
 </html>
