Add dynamic timer cards

--- a/index.html
+++ b/index.html
@@ -11,78 +11,78 @@
 	</head>
 	<body>
 		<meeting-cards>
-			<meeting-card type="breakup" class="yellow">
+			<meeting-card type="breakup" class="card yellow">
 				You're breaking up!
 			</meeting-card>
-			<meeting-card type="frozen" class="blue">
+			<meeting-card type="frozen" class="card blue">
 				You're FROZEN
 			</meeting-card>
-			<meeting-card type="muted" class="red">
+			<meeting-card type="muted" class="card red">
 				You're on MUTE
 			</meeting-card>
-			<meeting-card type="reboot" class="green">
+			<meeting-card type="reboot" class="card green">
 				Try a reboot!
 			</meeting-card>
-			<meeting-card type="canthear" class="blue">
+			<meeting-card type="canthear" class="card blue">
 				Can't hear you!
 			</meeting-card>
-			<meeting-card type="badconn" class="blue">
+			<meeting-card type="badconn" class="card blue">
 				Bad connection!
 			</meeting-card>
-			<meeting-card type="noise" class="blue">
+			<meeting-card type="noise" class="card blue">
 				Someone has BG noise!
 			</meeting-card>
-			<meeting-card type="mute" class="yellow">
+			<meeting-card type="mute" class="card yellow">
 				Please MUTE!
 			</meeting-card>
-			<meeting-card type="yes" class="green">
+			<meeting-card type="yes" class="card green">
 				Yes!
 			</meeting-card>
-			<meeting-card type="no" class="red">
+			<meeting-card type="no" class="card red">
 				No!
 			</meeting-card>
-			<meeting-card type="awesome" class="green">
+			<meeting-card type="awesome" class="card green">
 				Awesome!
 			</meeting-card>
-			<meeting-card type="pass" class="yellow">
+			<meeting-card type="pass" class="card yellow">
 				I pass
 			</meeting-card>
-			<meeting-card type="elmo" class="green">
+			<meeting-card type="elmo" class="card green">
 				ELMO
 			</meeting-card>
-			<meeting-card type="speedup" class="green">
+			<meeting-card type="speedup" class="card green">
 				Speed up
 			</meeting-card>
-			<meeting-card type="slowdown" class="yellow">
+			<meeting-card type="slowdown" class="card yellow">
 				Slow down
 			</meeting-card>
-			<meeting-card type="repeat" class="blue">
+			<meeting-card type="repeat" class="card blue">
 				Please repeat!
 			</meeting-card>
-			<meeting-card type="hold" class="yellow">
+			<meeting-card type="hold" class="card yellow">
 				Hold please!
 			</meeting-card>
-			<meeting-card type="brb" class="blue">
+			<meeting-card type="brb" class="card blue">
 				Be right back.
 			</meeting-card>
-			<meeting-card type="gtg" class="red">
+			<meeting-card type="gtg" class="card red">
 				Got to go.
 			</meeting-card>
-			<meeting-card type="question" class="blue">
+			<meeting-card type="question" class="card blue">
 				Got a question
 			</meeting-card>
-			<meeting-card type="fivemin" class="green">
-				5 min
-			</meeting-card>
-			<meeting-card type="threemin" class="green">
-				3 min
-			</meeting-card>
-			<meeting-card type="twomin" class="green">
-				2 min
-			</meeting-card>
-			<meeting-card type="onemin" class="green">
-				1 min
-			</meeting-card>
+			<timer-card type="fivemin" class="card green">
+				5:00 min
+			</timer-card>
+			<timer-card type="threemin" class="card green">
+				3:00 min
+			</timer-card>
+			<timer-card type="twomin" class="card green">
+				2:00 min
+			</timer-card>
+			<timer-card type="onemin" class="card green">
+				1:00 min
+			</timer-card>
 		</meeting-cards>
 	</body>
 </html>
