Add footer with more info

--- a/index.html
+++ b/index.html
@@ -84,5 +84,24 @@
 				1:00 min
 			</timer-card>
 		</meeting-cards>
+		<footer>
+			<info-card>
+				<a class="trigger">About</a>
+				<div class="info">
+					<h1>Meeting Cards</h1>
+					<p>
+						This is a virtual card app that contains cards to aid in video conference calls similar to
+						<a href="https://www.collaborationsuperpowers.com/supercards/">Collaboration Supercards</a>.
+					</p>
+					<p>
+						It was further inspired by
+						<a href="https://www.seethinkdo.it/meeting-cards/">Stephen Walker's implementation</a>.
+					</p>
+					<p>
+						Please contribute <a href="https://github.com/wyrfel/meeting-cards">on Github</a></p>
+					</p>
+				</div>
+			</info-card>
+		</footer>
 	</body>
 </html>
